--- a/app/globals.css
+++ b/app/globals.css
@@ -30,9 +30,10 @@
         --card-foreground: 240 10% 3.9%;
         --popover: 0 0% 100%;
         --popover-foreground: 240 10% 3.9%;
-        --primary: 0 0% 20.50%;
-        --primary-message: 0 0% 95.7%;
-        --primary-foreground: 0 0% 20%;
+        --primary: 240.0, 4.8%, 95.9%;
+        --primary-message: 240, 4.81%, 95.89%;
+        --primary-foreground: 0 0% 98%;
+        --primary-message-foreground: 0 0% 20%;
         --secondary: 240 4.8% 95.9%;
         --secondary-foreground: 240 5.9% 10%;
         --muted: 240 4.8% 95.9%;
@@ -104,6 +105,10 @@
     body {
         @apply bg-background text-foreground;
     }
+}
+
+.primary-message-bg {
+    background-color: #f5f5f5;
 }
 
 .skeleton {
