--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@
         --card-foreground: 240 10% 3.9%;
         --popover: 0 0% 100%;
         --popover-foreground: 240 10% 3.9%;
-        --primary: 240.0, 4.8%, 95.9%;
+        --primary: 240 5.9% 10%;
         --primary-message: 240, 4.81%, 95.89%;
         --primary-foreground: 0 0% 98%;
         --primary-message-foreground: 0 0% 20%;
